# sdl2-compat

./: CMakeLists.txt
.github/workflows/: main.yml  release.yml
cmake/: sdlchecks.cmake  sdlcompilers.cmake
src/: sdl2_compat.c
src/test/: SDL_test_common.c
test/: CMakeLists.txt
